--- a/landingpage.html
+++ b/landingpage.html
@@ -21,15 +21,21 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playfair+Display:ital,wght@1,400..900&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     
 </head>
 <body>
     <header class="baskervillefont">
-        <div id="logo">
+        <a href="#row1"><div id="logo">
             <img src="../Brewology Coffee/images/headerlogo.png"/>
-        </div>
+        </div></a>
         <nav>
-            <ul>
+
+            <label for="hamburger-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
+            <input type="checkbox" id="hamburger-menu" class="mobile mobile-menu"/>
+            
+            <ul id="navmenu">
                 <li>
                     <a href="#">Home</a>
                 </li>
