--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="stylesheet" href="/css/style.css"/>
+    <link  rel="stylesheet" href="css\style.css"/>
     <title>Brewology Coffee</title>
-    <link rel="icon" type="image/x-icon" href="/images/headerlogo.png">
+    <link rel="icon" type="image/x-icon" href="images\headerlogo.png">
 
     <!-- fonts -->
         <!-- alice font -->
@@ -28,7 +28,7 @@
 <body>
     <header class="baskervillefont">
         <a href="#row1"><div id="logo">
-            <img src="/images/headerlogo.png"/>
+            <img src="images\headerlogo.png"/>
         </div></a>
         <nav>
 
@@ -52,11 +52,11 @@
     <main>
         <div class="rows" id="row1">
             <video autoplay muted loop>
-                <source src="/images/landingbgvid.mp4" type="video/mp4">
+                <source src="images\landingbgvid.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             
-            <img id="herologo" src="/images/herologo.png"/>
+            <img id="herologo" src="images\herologo.png"/>
 
             <a id="brewbutton" href="#row2"><div>
             <h3 class="playfairdisplayfont" id="brewtext">Start Brewing</h3>
@@ -70,7 +70,7 @@
             </div>
             <a href="#row3">
                 <div class="gonextbutton">
-                    <img class="nextpic" src="/images/next.png">
+                    <img class="nextpic" src="images\next.png">
                 </div>
             </a>
         </div>
@@ -82,7 +82,7 @@
             </div>
             <a href="#row4">
                 <div class="gonextbutton">
-                    <img class="nextpic" src="/images/next.png">
+                    <img class="nextpic" src="images\next.png">
                 </div>
             </a>
         </div>
@@ -94,7 +94,7 @@
             </div>
             <a href="#row5">
                 <div class="gonextbutton">
-                    <img class="nextpic" src="/images/next.png">
+                    <img class="nextpic" src="images\next.png">
                 </div>
             </a>
         </div>
