--- a/recipepage1.html
+++ b/recipepage1.html
@@ -41,7 +41,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="#">Recipes</a>
+                    <a href="recipepage1.html">Recipes</a>
                 </li>
                 <li>
                     <a href="#">About Us</a>
