--- a/index.html
+++ b/index.html
@@ -41,7 +41,20 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="recipepage1.html">Recipes</a>
+                    <a href="#" id="recipebutton">Recipes</a>
+                    <div id="recipesubmenu">
+                        <ul id="recipesubmenulist">
+                            <li>
+                                <a href="recipepage1.html">Recipe 1</a>
+                            </li>
+                            <li>
+                                <a href="recipepage2.html">Recipe 2</a>
+                            </li>
+                            <li>
+                                <a href="recipepage3.html">Recipe 3</a>
+                            </li>
+                        </ul>
+                    </div>
                 </li>
                 <li>
                     <a href="#">About Us</a>
