card click handler js v1(di mugana)

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- global styling -->
     <link rel="stylesheet" href="css\style.css"/>
+    <!-- page specific styling -->
     <link rel="stylesheet" href="css\mainstyle.css">
+
     <title>Brewology Coffee</title>
     <link rel="icon" type="image/x-icon" href="images\headerlogo.png">
 
@@ -41,9 +44,9 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="#" id="recipebutton">Recipes</a>
-                    <div id="recipesubmenu">
-                        <ul id="recipesubmenulist">
+                    <a href="#" class="recipebutton">Recipes</a>
+                    <div class="recipesubmenu">
+                        <ul class="recipesubmenulist">
                             <li>
                                 <a href="recipepage1.html">Recipe 1</a>
                             </li>
