updates to card focusing(finally working)

--- a/recipepage1.html
+++ b/recipepage1.html
@@ -71,13 +71,13 @@
             <div class="overlay"></div>
             <div class="content"><center><h1>THIS IS THE MAIN DIV FOR RECIPE</h1></center></div>
             <div class="cards" id="card1">
-                div 1
+                <h1>Ingredients</h1>    
             </div>
             <div class="cards" id="card2">
-                div 2
+                <h1>Steps</h1>
             </div>
             <div class="cards" id="card3">
-                div 3
+                <h1>Gallery</h1>
             </div>
         </div>
 
