test fix for card click handler

--- a/recipepage1.html
+++ b/recipepage1.html
@@ -94,6 +94,6 @@
         </footer>
     </main>
 
-    <script src="js\recipecardfocus.js"/>
+    <script src="js/recipecardfocus.js"></script>
 </body>
 </html>
