--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
         <!-- page specific styling -->
         <link rel="stylesheet" href="css\recipepagestyling.css">
 
-        <title>Recipe 1 - Brewology Coffee</title>
+        <title>About Us - Brewology Coffee</title>
         <link rel="icon" type="image/x-icon" href="images\headerlogo.png">
     
         <!-- fonts -->
@@ -69,23 +69,7 @@
     <main>
         <div class="rows" id="row1">
             <div class="overlay"></div>
-            <div class="content"><center><h1>RECIPE 1 TITLE HERE</h1></center></div>
-            <div class="cards" id="card1">
-                <h1>Ingredients</h1>    
-            </div>
-            <div class="cards" id="card2">
-                <h1>Steps</h1>
-                <ol>
-                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta quod id voluptate! Unde reprehenderit, perferendis illum expedita sunt odit repellat ducimus cupiditate nihil aperiam explicabo exercitationem maiores velit iure quam?</li>
-                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta quod id voluptate! Unde reprehenderit, perferendis illum expedita sunt odit repellat ducimus cupiditate nihil aperiam explicabo exercitationem maiores velit iure quam?</li>
-                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta quod id voluptate! Unde reprehenderit, perferendis illum expedita sunt odit repellat ducimus cupiditate nihil aperiam explicabo exercitationem maiores velit iure quam?</li>
-                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta quod id voluptate! Unde reprehenderit, perferendis illum expedita sunt odit repellat ducimus cupiditate nihil aperiam explicabo exercitationem maiores velit iure quam?</li>
-                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta quod id voluptate! Unde reprehenderit, perferendis illum expedita sunt odit repellat ducimus cupiditate nihil aperiam explicabo exercitationem maiores velit iure quam?</li>
-                </ol>
-            </div>
-            <div class="cards" id="card3">
-                <h1>Gallery</h1>
-            </div>
+            <div class="content"><center><h1>ABOUT US HERE</h1></center></div>
         </div>
 
         
