added handling for signup

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="rows scrollsnapclass" id="row2">
             <div class="previewtext">
-                <h1>COFFEE RECIPE 1</h1>
+                <a href="recipepage1.html" class="nostylelinks"><h1>COFFEE RECIPE 1</h1></a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <a href="#row3">
@@ -95,7 +95,7 @@
 
         <div class="rows scrollsnapclass" id="row3">
             <div class="previewtext2">
-                <h1>COFFEE RECIPE 2</h1>
+                <a href="recipepage2.html" class="nostylelinks"><h1>COFFEE RECIPE 2</h1></a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <a href="#row4">
@@ -107,7 +107,7 @@
 
         <div class="rows scrollsnapclass" id="row4">
             <div class="previewtext">
-                <h1>COFFEE RECIPE 3</h1>
+                <a href="recipepage3.html" class="nostylelinks"><h1>COFFEE RECIPE 3</h1></a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <a href="#row5">
@@ -120,10 +120,10 @@
         <div class="rows scrollsnapclass" id="row5">
             <div id="signup">
                 <center><h1 class="playfairdisplayfont">Join our Newsletter!</h2></center>
-                <input type="textfield" placeholder="Email"/>
-                <input type="textfield" placeholder="Password"/>
+                <input id="emailfield" type="textfield" placeholder="Email"/>
+                <input id="pwordfield" type="password" placeholder="Password"/>
 
-                <a id="signupbutton" href="#">
+                <a id="signupbutton" href="">
                 <div>
                 <h3 class="playfairdisplayfont" id="brewtext">Sign Up</h3>
                 </div>
@@ -142,6 +142,6 @@
         </footer>
     </main>
 
-    
+    <script src="js\signupfunction.js"></script>
 </body>
 </html>
