added recipe names and blur effect on card focus

--- a/aboutus.html
+++ b/aboutus.html
@@ -48,13 +48,13 @@
                     <div class="recipesubmenu">
                         <ul class="recipesubmenulist">
                             <li>
-                                <a href="recipepage1.html">Recipe 1</a>
+                                <a href="recipepage1.html">Cappuccino</a>
                             </li>
                             <li>
-                                <a href="recipepage2.html">Recipe 2</a>
+                                <a href="recipepage2.html">Iced Mocha</a>
                             </li>
                             <li>
-                                <a href="recipepage3.html">Recipe 3</a>
+                                <a href="recipepage3.html">Matcha Frappe</a>
                             </li>
                         </ul>
                     </div>
