--- a/recipepage1.html
+++ b/recipepage1.html
@@ -7,7 +7,7 @@
         <!-- page specific styling -->
         <link rel="stylesheet" href="css\recipepagestyling.css">
 
-        <title>Recipe 1 - Brewology Coffee</title>
+        <title>Cappuccino - Brewology Coffee</title>
         <link rel="icon" type="image/x-icon" href="images\headerlogo.png">
     
         <!-- fonts -->
@@ -48,13 +48,13 @@
                     <div class="recipesubmenu">
                         <ul class="recipesubmenulist">
                             <li>
-                                <a href="recipepage1.html">Recipe 1</a>
+                                <a href="recipepage1.html">Cappuccino</a>
                             </li>
                             <li>
-                                <a href="recipepage2.html">Recipe 2</a>
+                                <a href="recipepage2.html">Iced Mocha</a>
                             </li>
                             <li>
-                                <a href="recipepage3.html">Recipe 3</a>
+                                <a href="recipepage3.html">Matcha Frappe</a>
                             </li>
                         </ul>
                     </div>
@@ -67,9 +67,9 @@
     </header>
 
     <main>
-        <div class="rows" id="row1">
+        <div class="rows row1" id="rp1">
             <div class="overlay"></div>
-            <div class="content"><center><h1>RECIPE 1 TITLE HERE</h1></center></div>
+            <div class="content"><center><h1>CAPPUCCINO</h1></center></div>
             <div class="cards" id="card1">
                 <h1>Ingredients</h1>    
             </div>
